--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
     
-  excel: ^2.1.0
+  excel: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   math_expressions: ^2.4.0
+  firebase_core: ^2.20.0
+  cloud_firestore: ^4.13.0
+  path_provider: ^2.1.1
+  carousel_slider: ^4.2.1
+  flutter_riverpod: ^2.4.5
 
 dev_dependencies:
   flutter_test:
