--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   path_provider: ^2.1.1
   carousel_slider: ^4.2.1
   flutter_riverpod: ^2.4.5
+  firebase_storage: ^11.5.2
 
 dev_dependencies:
   flutter_test:
