--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,14 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_riverpod: ^2.4.5
   firebase_storage: ^11.5.2
+  json_annotation: ^4.8.1
+  convert: ^3.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.6
 flutter:
   uses-material-design: true
